--- a/TopGunSyllabus.iPhone/Main.storyboard
+++ b/TopGunSyllabus.iPhone/Main.storyboard
@@ -190,5 +190,6 @@
         <image name="Images/topgun_teamfortress.png" width="1757" height="470"/>
         <image name="topgun_teamfortress.png" width="1757" height="470"/>
         <image name="Icon.png" width="57" height="57"/>
+        <image name="Images/TopGunIPhone6Plus.png" width="1242" height="2208"/>
     </resources>
 </document>
