--- a/TopGunSyllabus.iPhone/Main.storyboard
+++ b/TopGunSyllabus.iPhone/Main.storyboard
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="41">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
@@ -173,6 +173,7 @@
                                 <variation key="heightClass=compact-widthClass=compact" fixedFrame="YES">
                                     <rect key="frame" x="124" y="363" width="166" height="65"/>
                                 </variation>
+                                <accessibility key="accessibilityConfiguration" identifier="Phases"/>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="3464" translatesAutoresizingMaskIntoConstraints="NO" fixedFrame="YES" image="Images/topgun_teamfortress.png" semanticContentAttribute="playback">
                                 <rect key="frame" x="53" y="188" width="308" height="128"/>
@@ -183,6 +184,7 @@
                         </subviews>
                     </view>
                     <navigationItem id="1616" key="navigationItem" title="Home"/>
+                    <connections/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1460" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
