--- a/TopGunSyllabus.iPhone/Main.storyboard
+++ b/TopGunSyllabus.iPhone/Main.storyboard
@@ -114,6 +114,7 @@
                                 <connections>
                                     <segue id="3437" destination="BYZ-38-t0r" kind="show" identifier="PhaseDetailSegue"/>
                                 </connections>
+                                <accessibility key="accessibilityConfiguration" identifier="UIPhase"/>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -173,7 +174,7 @@
                                 <variation key="heightClass=compact-widthClass=compact" fixedFrame="YES">
                                     <rect key="frame" x="124" y="363" width="166" height="65"/>
                                 </variation>
-                                <accessibility key="accessibilityConfiguration" identifier="Phases"/>
+                                <accessibility key="accessibilityConfiguration" identifier="UIPhases"/>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="3464" translatesAutoresizingMaskIntoConstraints="NO" fixedFrame="YES" image="Images/topgun_teamfortress.png" semanticContentAttribute="playback">
                                 <rect key="frame" x="53" y="188" width="308" height="128"/>
